# test_all_dependencies_repo

./: Cargo.toml  Dockerfile  README.md  build.gradle  environment.yml  go.mod  package.json  packages.config  pom.xml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  vcpkg.json
sub_dir_3/: package.json
