[package]
name = "llm-dependency-classifier"
version = "0.1.0"
edition = "2021"
authors = ["Tony <tony@example.com>"]
description = "A Rust project to test LLM classification of niche AI/ML vs non-AI crates"

[dependencies]
# === AI/ML-related (niche, ambiguous, or rarely used) ===
ndarray = "0.15"
ndarray-linalg = "0.16"
ndarray-stats = "0.5"
linfa = "0.6.1"
linfa-trees = "0.6.1"
linfa-clustering = "0.6.1"
linfa-bayes = "0.6.1"
rustlearn = "0.6.0"
smartcore = "0.3.2"
tract-core = "0.17.3"
tract-onnx = "0.17.3"
tch = "0.13.0"
burn = "0.10.0"
dfdx = "0.10.0"
autograph = "0.1.6"
rust-bert = "0.21.0"
tangram = "0.9.0"
juice = "0.5.0"
evcxr = "0.13.0"
noodles = "0.57.0"  # bioinformatics + ML-adjacent

# === Non-AI/ML (misleading, confusing, obscure or utility crates) ===
regex = "1.10.2"
itertools = "0.12.0"
colored = "2.0.0"
clap = "4.5.2"
indicatif = "0.17.8"
crossterm = "0.27.0"
askama = "0.12.0"
rayon = "1.10.0"
ureq = "2.9.6"
reqwest = "0.12.4"
serde_json = "1.0.116"
toml = "0.8.12"
dotenvy = "0.15.7"
figment = "0.10.15"
log = "0.4.21"
fern = "0.6.2"
env_logger = "0.11.3"
uuid = "1.8.0"
time = "0.3.36"
hexf = "0.2.1"  # hex float parser that *sounds* ML-ish

